--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
   }
   
   .select2-selection {
-    height: 40px;
+    min-height: 40px !important;
     display: flex !important;
     align-items: center;
   }
