Added: support for manifest file

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,9 @@
   <link href="//cdn.datatables.net/1.10.25/css/dataTables.bulma.min.css" rel="stylesheet" />
   <link href="//cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
+  <meta name="theme-color" content="#003300">
+  <link rel="manifest" href="/manifest.json">
+
 <style>
   body,
   html {
